Evening tea Saturday June 6th 2020

--- a/Lottery prediction.ipynb
+++ b/Lottery prediction.ipynb
@@ -1,12 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lottery Chances App\n",
+    "## The Engineering dept is making an app that will help the lottery players to see their chances of winning \n",
+    "## The data that we are having is from a Canadian lotto company 6/49"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The app aims on answering the following questions:\n",
+    "- What is the probability of winning a big prize using one ticket\n",
+    "- What is the probability of winning a big prize using the numbers input by the user\n",
+    "- What is the probability of winning when we have more than one ticket\n",
+    "- What is the probability of winning small prize picking up winning numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "# importing all the libraries that we are going to use \n",
+    "import pandas as pd\n",
+    "import time "
    ]
   },
   {
@@ -15,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load the data set into pandas\n",
     "data_649 = pd.read_csv('649.csv')"
    ]
   },
@@ -266,7 +289,41 @@
     }
    ],
    "source": [
+    "#load the data to get the overview of the data we are having\n",
     "data_649"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3665 entries, 0 to 3664\n",
+      "Data columns (total 11 columns):\n",
+      "PRODUCT            3665 non-null int64\n",
+      "DRAW NUMBER        3665 non-null int64\n",
+      "SEQUENCE NUMBER    3665 non-null int64\n",
+      "DRAW DATE          3665 non-null object\n",
+      "NUMBER DRAWN 1     3665 non-null int64\n",
+      "NUMBER DRAWN 2     3665 non-null int64\n",
+      "NUMBER DRAWN 3     3665 non-null int64\n",
+      "NUMBER DRAWN 4     3665 non-null int64\n",
+      "NUMBER DRAWN 5     3665 non-null int64\n",
+      "NUMBER DRAWN 6     3665 non-null int64\n",
+      "BONUS NUMBER       3665 non-null int64\n",
+      "dtypes: int64(10), object(1)\n",
+      "memory usage: 315.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get summary of all the columns\n",
+    "data_649.info()"
    ]
   },
   {
