--- a/Lottery prediction.ipynb
+++ b/Lottery prediction.ipynb
@@ -15,14 +15,14 @@
    "source": [
     "### The app aims on answering the following questions:\n",
     "- What is the probability of winning a big prize using one ticket\n",
-    "- What is the probability of winning a big prize using the numbers input by the user\n",
+    "- Check if the number has been picked up before, and what is the probability of winning with that ticket\n",
     "- What is the probability of winning when we have more than one ticket\n",
     "- What is the probability of winning small prize picking up winning numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,10 +328,254 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to calculate factoria\n",
+    "\n",
+    "\n",
+    "def factorial(n):\n",
+    "    fact = 1\n",
+    "    for i in range(1,n):\n",
+    "        fact = fact*i\n",
+    "    return fact*n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to calculate permutations  when we we are drawing elements without replace\n",
+    "\n",
+    "\n",
+    "def factorial_wt_replace(n,k):\n",
+    "    numerator = factorial(n)\n",
+    "    denominator = factorial((n-k))\n",
+    "    return numerator/denominator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to calculate combination\n",
+    "\n",
+    "\n",
+    "def combination(n,k):\n",
+    "    numerator = factorial_wt_replace(n,k)\n",
+    "    denominator = factorial(k)\n",
+    "    return numerator/denominator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#unit test\n",
+    "factorial(len([\"a\", \"b\", \"j\", \"k\", \"x\", \"y\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "311875200.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#unit test\n",
+    "factorial_wt_replace(52,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2598960.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#unit test\n",
+    "combination(52,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is the probability of winning a big prize using one ticket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.151123842018516e-06"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#the probability of winning a big prize using one ticket\n",
+    "\n",
+    "\n",
+    "successful_outcomes = 1\n",
+    "number_outcomes = combination(49,6)\n",
+    "\n",
+    "\n",
+    "probability = (successful_outcomes/number_outcomes)*100\n",
+    "probability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check if the number has been picked up before, and what is the probability of winning with that ticket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checking if the number has been selected before.\n",
+    "\n",
+    "\n",
+    "def checking_historical(list_in):\n",
+    "    trues = []\n",
+    "    for index,row in data_649.iterrows():\n",
+    "        string = row[4:10]\n",
+    "        string = string.to_list()\n",
+    "\n",
+    "        if string == list_in:\n",
+    "            trues.append(True)\n",
+    "    return(len(trues))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "checking_historical([14, 24, 31, 39, 37, 48])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The answer should be the number of times that the particular event has happened + the probability of one ticket to give a  win"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is the probability of winning when we have more than one ticket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculating the probability of winning lottery using more than one ticket\n",
+    "\n",
+    "\n",
+    "def multi_ticket_lottery(n):\n",
+    "    successful_outcomes = n\n",
+    "    number_outcomes = combination(49,6)\n",
+    "    probability = (successful_outcomes/number_outcomes)*100\n",
+    "    return probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multi_ticket_lottery(13983816)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#I still do not understand how to calculate probability of having small prize"
+   ]
   }
  ],
  "metadata": {
