last Edit monday June 8th 0504

--- a/Lottery prediction.ipynb
+++ b/Lottery prediction.ipynb
@@ -569,13 +569,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pobability of winning small prize when some of the numbers appear on Jackpot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculating the probability of winning small prize for certain numbers to appear on the Jackpot\n",
+    "def small_prize(n):\n",
+    "    combination_selected_num = combination(6,n)\n",
+    "    combination_remaining = combination (43, 6-n)\n",
+    "    successful_outcomes = combination_remaining*combination_selected_num\n",
+    "    combinational_total = combination(49,6)\n",
+    "    \n",
+    "    probability = (successful_outcomes/combinational_total)*100\n",
+    "    \n",
+    "    return probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.237802900152577"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_prize(2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#I still do not understand how to calculate probability of having small prize"
-   ]
+   "source": []
   }
  ],
  "metadata": {
